# IuriNetwork

./: CMakeLists.txt  README.md
jupyter/: read_parquet.ipynb
src/: create_folders.cpp  create_folders.hpp  main.cpp  network_construct.cpp  network_construct.hpp  randutils.cpp  randutils.hpp  transform_data.cpp  transform_data.hpp  write_data.cpp  write_data.hpp
